[tool.poetry]
name = "langgraph-code-assistant"
version = "0.1.0"
description = ""
authors = ["左永辉 <zuoyonghui@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.14"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.1"
langchain = "^0.3.14"
langgraph = "^0.2.62"
bs4 = "^0.0.2"
pydantic = "^2.10.5"
ipython = "^8.31.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
